# agenthost

./: .gitignore  1  :q  :wq  Cargo.toml  Cargo_test_llamacpp.toml  LICENSE.md  README.md  agent.txt  build.sh  build_candle.rs  chat.html  defaultsection.rhai  deploy_vast.sh  destroy_vast.sh  dyn.txt  error_in_rust.txt  ex.md  ex.rs  ex.sh  example.rs  game_logic.rhai  help.md  install_and_connect.sh  install_build_req.sh  lk.rhai  llamacppoutp  mod1.rs  mod2.rs  nested.rhai  notes  plan.md  rust_overloading.rs  script.rhai  snippet.rs  ssh_7845467.json  ssh_7845635.json  ssh_7845732.json  ssh_7845846.json  ssh_7845915.json  (+5 more)
.cargo/: config.toml
candle_src/: axumtest.rs  gpucli.rs  quantized_demo_main.rs  real_main.rs  token_output_stream.rs
data/anon3vnHbToOjB/sessions/: 36.json  38.json
runpod/: getpod.sh  getpod_ip_port.sh  phone_home.sh  start.sh  teststart.sh
sandloc/: welcome.txt
sandloc/locations/: blacksmith.txt  forest.txt  general_store.txt  hidden_cave.txt  tavern.txt  town_square.txt
sandloc/locations/.backup/: general_store.txt.0  town_square.txt.0
scripts/: basic.rhai  dm.rhai  gameover.rhai  lk.rhai  randword.rhai  testapppend.rhai  testeval.rhai  testeval2.rhai  testjoin.rhai  utils.rhai  x.rhai  y.rhai
sd/: runsd
src/: analysis.md  askchat.js  axumtest.rs  cat.rs  chatlog.rs  ex.rs  help.md  help.rs  imagenet.rs  lib.rs  loop.rs  main.rs  oldmain.rs  openai_chat.rs  plan.md  runner.rs  scripts.rs  shorthands.rs  snippet.rs  token_output_stream.rs
src/agent/: factor.md  mod.rs  xmod.rs
src/agentmgr/: mod.rs  mody.rs
src/api/: chatuimessage.rs  mod.rs  mod_q.rs  modx.rs  phone_home.rs
src/api/backup/: modchatstream.rs
src/candle/: imagenet.rs  mod.rs
src/chat/: mod.rs
src/chatlog/: mod.rs  serialize.rs
src/connector/: mod.rs
src/costcalc/: mod.rs
src/errors/: mod.rs
src/jwt_util/: mod.rs
src/llamacppchat/: download_model.rs  extract_code.rs  mistral.rs  mixtral.rs  mod.rs  mod_backup.rs  model.rs  orca.rs
src/old/: runagent.rs
src/openai_chat/: mod.rs
src/scripts/: mod.rs
src/shorthands/: mod.rs
static/: anon_user.js  backup_chat.html  chat.html  index.html  login.js  main.css  main.js  showaction.js  showfunc.js
static/js/: anon_user.js
