[package]
name = "agenthost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-openai = "0.17.0"
axum = { version = "0.6.20", features = [ "tokio" ] }
bytes = "1.5.0"
candle-examples = "*"
chrono = "0.4.31"
flume = { version = "0.11.0" }
futures = "0.3.28"
futures-util = "0.3.28"
hf-hub = "*"
hyper = "0.14.27"
jsonwebtoken = "9.1.0"
maplit = "1.0.2"
once_cell = "1.18.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.10.2"
rhai = { version = "1.16.2", features = [ "serde" ] }
rhai-fs = "0.1.2"
rhai-rand = "0.1.5"
serde_urlencoded = "0.7.1"
smartstring = "1.0.1"
termimad = "0.25.5"
termion = "2.0.1"
tiktoken-rs = "0.5.4"
tokio = { version = "1.33.0", features = [ "full" ] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tower-http = { version = "0.3", features = ["fs", "trace", "cors"] }

candle-core = { version = "0.3.1" }
candle-datasets = { version = "0.3.1" }
candle-nn = { version = "0.3.1" }
candle-transformers = { version = "0.3.1" }
candle-flash-attn = { version = "0.3.1", optional = true }
candle-onnx = { version = "*", optional = true }
pyo3 = { version = "0.20.0", features = ["auto-initialize"], optional = true }

gemm = { version = "0.16.6", features = ["wasm-simd128-enable"] }
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"], optional=true }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.23.0", default-features = false }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }

accelerate-src = { version = "0.3.2", optional=true }
byteorder = "1.4.3"
clap = { version = "4.2.4", features = ["derive"] }
cudarc = { version = "0.9.14", features = ["f16"], optional=true }
#intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.2.147" }
log = "0.4"
memmap2 = { version = "0.7.1", features = ["stable_deref_trait"] }
num_cpus = "1.15.0"
num-traits = "0.2.15"
parquet = { version = "45.0.0" }
rand_distr = "0.4.3"
rayon = "1.7.0"
rusttype = { version = "0.9", default-features = false }
safetensors = "0.3.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.99"
thiserror = "1"
tokenizers = { version = "0.13.4", default-features = false }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
wav = "1.0.0"
yoke = { version = "0.7.2", features = ["derive"] }
zip = { version = "0.6.6", default-features = false }
metal = { version = "0.27.1", features = ["mps"], package="candle-metal", optional=true }
llama_cpp = "0.1.3"


[build-dependencies]
anyhow = "*"
byteorder = "*"
clap = "*"
hf-hub = "*"
imageproc = "*"
memmap2 = "*"
rand = "*"
rusttype = "*"
tracing = "*"
tracing-chrome = "*"
tracing-subscriber = "*"
wav = "*"
# Necessary to disambiguate with tokio in wasm examples which are 1.28.1
#
tokio = "1.29.1"

[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]
onnx = ["candle-onnx"]

[profile.release]
lto = true
panic = 'abort'


