[package]
name = "agenthost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-openai = "0.17.0"
axum = { version = "0.6.20", features = [ "tokio" ] }
bytes = "1.5.0"
chrono = "0.4.31"
flume = { version = "0.11.0" }
futures = "0.3.28"
futures-util = "0.3.28"
hf-hub = "*"
hyper = "0.14.27"
jsonwebtoken = "9.1.0"
maplit = "1.0.2"
once_cell = "1.18.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.10.2"
rhai = { version = "1.16.2", features = [ "serde" ] }
rhai-fs = "0.1.2"
rhai-rand = "0.1.5"
serde_urlencoded = "0.7.1"
smartstring = "1.0.1"
termimad = "0.25.5"
termion = "2.0.1"
tiktoken-rs = "0.5.4"
tokio = { version = "1.33.0", features = [ "full" ] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tower-http = { version = "0.3", features = ["fs", "trace", "cors"] }

serde = { version = "1.0.171", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.99"

llama_cpp_rs = { git = "https://github.com/runvnc/rust-llama.cpp", features = [ "cuda" ] }
reqwest = "0.11.22"
tracing = "0.1.40"


#[profile.release]
#lto = true
